namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sajaab
  labels:
    name: sajaab
