saja-mongo-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  namespace: sajaab
  labels:
    app: mongo-pod
spec:
  containers:
    - name: mongo-container
      image: saja123/mongo:latest
      ports:
        - containerPort: 27017
