saja-redis-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  namespace: sajaab
  labels:
    app: redis-pod
spec:
  containers:
    - name: redis-container
      image: saja123/redis:latest
      ports:
        - containerPort: 6379
