saja-expensy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: sajaab   # <- uncomment if you use a namespace
spec:
  ingressClassName: nginx
  rules:
  - host: saja-expensy.az.diogohack.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
